--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -56,7 +56,23 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
-    font-size: 3.5vw;
+    font-size: 1.3vw;
+}
+
+section > p {
+    padding-bottom: 2em;
+}
+
+section#img01 {
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+  
+}
+
+section#img02 {
+    background-image: url(../imagens/background002.jpg);
+    
+
 }
 
 .normal {
@@ -67,12 +83,16 @@ section {
 .imagem {
     background-color: rgb(37, 37, 37);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.486);
+    background-size: cover;
+    background-attachment: fixed; /* fixar imagens */
 }
 
 .imagem > p {
-    background-color: rgba(0, 0, 0, 0.192);
+    background-color: rgba(0, 0, 0, 0.486);
     display: inline-block;
     padding: 5px;
+    text-shadow: 1px 1px 0px black;
 }
 
 footer {
